--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# GitIgnore #
 # dependencies
 /node_modules
 /.pnp
@@ -6,6 +5,9 @@
 
 # testing
 /coverage
+
+# production
+/build
 
 # misc
 .DS_Store
